--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.10"
   }
 }
